force-app/main/default/objects/Interview_Feedback_Audit__c/Interview_Feedback_Audit__c.object-meta.xml
<CustomObject>
    <label>Interview Feedback Audit</label>
    <nameField>
        <displayFormat>AUDIT-{0000000}</displayFormat>
        <label>Audit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interview Feedback Audits</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>