force-app/main/default/objects/Interview_Feedback_Audit__c/fields/Event_Details__c.field-meta.xml
<CustomField>
    <fullName>Event_Details__c</fullName>
    <label>Event Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>