force-app/main/default/objects/Interview_Feedback_Audit__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DATA_ENCRYPTION</fullName>
                <label>Data Encryption</label>
            </value>
            <value>
                <fullName>GDPR_ANONYMIZATION</fullName>
                <label>GDPR Anonymization</label>
            </value>
            <value>
                <fullName>DATA_RETENTION</fullName>
                <label>Data Retention</label>
            </value>
            <value>
                <fullName>GDPR_ACCESS_REQUEST</fullName>
                <label>GDPR Access Request</label>
            </value>
            <value>
                <fullName>GDPR_ACCESS_COMPLETE</fullName>
                <label>GDPR Access Complete</label>
            </value>
            <value>
                <fullName>GDPR_ACCESS_ERROR</fullName>
                <label>GDPR Access Error</label>
            </value>
            <value>
                <fullName>TEST_EVENT</fullName>
                <label>Test Event</label>
            </value>
            <value>
                <fullName>GDPR_ERROR</fullName>
                <label>GDPR Error</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>